Added All Components

--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>MEAN Authentication</title>
+  <title>RTS</title>
   <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
   <base href="/">
 
