--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body id="bg-img">
+<body>
   <app-root></app-root>
 </body>
 
