--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,20 @@
 
 <body>
   <app-root></app-root>
+
+  <footer class="sticky-footer">
+    <div class="text-center">
+      <div class="icons">
+
+        <a href="https://github.com/Alrobbertz/RTS-Development">
+          <h3>Find This Project on Githib</h3>
+          <i class="fab fa-github fa-3x"></i>
+        </a>
+      </div>
+    </div>
+  </footer>
 <script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+
+
 
 </html>
